# torchsurv

./: .gitignore  .pre-commit-config  .pre-commit-config.yaml  AUTHORS.html  CHANGELOG.html  CLAUDE.md  CODEOWNERS-copy.html  CODEOWNERS.md  CODE_OF_CONDUCT-copy.html  CODE_OF_CONDUCT.md  CONTRIBUTING-copy.html  CONTRIBUTING.md  GOVERNANCE.md  IMPLEMENTATION_SUMMARY.md  LICENCE.txt  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  PR_DESCRIPTION.md  README-copy.html  README.md  README.rst  RELEASE_CHECKLIST.md  VERIFICATION_REPORT.md  benchmarks.html  devnotes.html  genindex.html  index.html  loss.html  metrics.html  objects.inv  package_overview.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  stats.html  test_modernization.py
.codeboarding/: InputValidationUtilities.md  ModelTraining.md  MomentumTrainingStrategy.md  SurvivalLossFunctions.md  SurvivalMetricsAndStats.md  on_boarding.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-release.yml  check-changelog.yml  ci.yml  codeqc.yml  docs.yml  draft-pdf.yml  torch-compatibility.yml
_autosummary/: torchsurv.loss.cox.html  torchsurv.loss.momentum.html  torchsurv.loss.survival.html  torchsurv.loss.weibull.html  torchsurv.metrics.auc.html  torchsurv.metrics.brier_score.html  torchsurv.metrics.cindex.html  torchsurv.stats.ipcw.html  torchsurv.stats.kaplan_meier.html
_modules/: index.html
_modules/torchsurv/loss/: cox.html  momentum.html  survival.html  weibull.html
_modules/torchsurv/metrics/: auc.html  brier_score.html  cindex.html
_modules/torchsurv/stats/: ipcw.html  kaplan_meier.html
_sources/: AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT-copy.md  README-copy.md  benchmarks.rst  devnotes.md  index.rst  loss.rst  metrics.rst  stats.rst
_sources/_autosummary/: torchsurv.loss.cox.rst  torchsurv.loss.momentum.rst  torchsurv.loss.survival.rst  torchsurv.loss.weibull.rst  torchsurv.metrics.auc.rst  torchsurv.metrics.brier_score.rst  torchsurv.metrics.cindex.rst  torchsurv.stats.ipcw.rst  torchsurv.stats.kaplan_meier.rst
_sources/notebooks/: introduction.ipynb  loss.md  momentum.ipynb  regression_time_varying.ipynb  survival.md  time_varying.ipynb  time_varying_covariates.md
_static/: custom.css
communications/: blog_pytorch_foundation.md
dev/: build-docs.sh  codeqc.sh  environment.yml  run-doctests.sh  run-unittests.sh
docs/: AUTHORS.md  CHANGELOG.md  Makefile  README.md  benchmarks.md  conf.py  devnotes.md  index.rst  loss.rst  metrics.rst  package_overview.md  stats.rst
docs/_templates/autosummary/: class.rst  module.rst
docs/notebooks/: evaluation_metrics_survival_model.md  heart.csv  helpers_introduction.py  helpers_momentum.py  helpers_time_varying.py  introduction.ipynb  loss.md  loss_time_covariates.py  metrics.md  momentum.ipynb  non_medical_applications.ipynb  regression_time_varying.ipynb  survival.md  synthetic_data_signal.ipynb  time_varying.ipynb  time_varying_covariates.md
docs/source/: references.bib
doctrees/: AUTHORS.doctree  CHANGELOG.doctree  devnotes.doctree  environment.pickle  index.doctree  loss.doctree  metrics.doctree  stats.doctree
doctrees/_autosummary/: torchsurv.loss.cox.doctree  torchsurv.loss.momentum.doctree  torchsurv.loss.weibull.doctree  torchsurv.metrics.auc.doctree  torchsurv.metrics.brier_score.doctree  torchsurv.metrics.cindex.doctree  torchsurv.stats.ipcw.doctree  torchsurv.stats.kaplan_meier.doctree
doctrees/notebooks/: introduction.doctree  momentum.doctree
html/: .buildinfo  AUTHORS.html  CHANGELOG.html  devnotes.html  genindex.html  index.html  loss.html  metrics.html  py-modindex.html  search.html  searchindex.js  stats.html
html/_autosummary/: torchsurv.loss.cox.html  torchsurv.loss.momentum.html  torchsurv.loss.weibull.html  torchsurv.metrics.auc.html  torchsurv.metrics.brier_score.html  torchsurv.stats.ipcw.html  torchsurv.stats.kaplan_meier.html
html/_sources/: devnotes.md  index.rst
html/notebooks/: momentum.html  momentum.ipynb
notebooks/: introduction.html  introduction.ipynb  loss.html  metrics.html  momentum.html  momentum.ipynb  non_medical_applications.html  regression_time_varying.html  survival.html  time_varying.html  time_varying_covariates.html
paper/: paper.bib  paper.md
src/torchsurv/: __init__.py  types.py
src/torchsurv/loss/: __init__.py  centime.py  competing_risks.py  cox.py  momentum.py  survival.py  time_covariates.py  weibull.py
src/torchsurv/metrics/: __init__.py  auc.py  brier_score.py  cindex.py
src/torchsurv/stats/: __init__.py  ipcw.py  kaplan_meier.py
src/torchsurv/tools/: __init__.py  synthetic.py  validate_data.py  validate_inputs.py  validation.py  validators.py
tests/: README.md  conftest.py  strategies.py  test_auc.py  test_benchmark.py  test_brier_score.py  test_cindex.py  test_competing_risks.py  test_cox.py  test_hypothesis.py  test_ipcw.py  test_kaplan_meier.py  test_mnist.py  test_momentum.py  test_survival.py  test_synthetic.py  test_torch_compile.py  test_torch_jit.py  test_train.py  test_validators.py  test_weibull.py  utils.py
tests/benchmark_data/: benchmark_auc.json  benchmark_brier_score.json  benchmark_cindex.json  benchmark_cox.json  benchmark_cox_with_ties.json  benchmark_cox_without_ties.json  benchmark_extended_cox_with_ties.json  benchmark_extended_cox_without_ties.json  benchmark_ipcw.json  benchmark_kaplan_meier.json  benchmark_weibull.json
tests/benchmark_script/: test_auc.R  test_brier_score.R  test_cindex.R  test_cox.R  test_ipcw.R  test_kaplan_meier.R  test_weibull.R
