[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchsurv"
version = "0.1.5"
description = "Deep survival analysis made easy with pytorch"
authors = [
    {name = "Thibaud Coroller", email = "thibaud.coroller@novartis.com"},
    {name = "Melodie Monod", email = "monod.melodie@gmail.com"},
    {name = "Peter Krusche", email = "peter.krusche@novartis.com"},
    {name = "Qian Cao", email = "qian.cao@fda.hhs.com"}
]

license = {file = "LICENSE.txt"}
readme = "README.md"

keywords = ["example", "project", "tutorial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
  "torch",
  "scipy",
  "numpy",
  "torchmetrics",
]

[project.urls]
Homepage = "https://github.com/Novartis/torchsurv"
Repository = "https://github.com/Novartis/torchsurv"
Documentation = "https://opensource.nibr.com/torchsurv/"
IssueTracker = "https://github.com/Novartis/torchsurv/issues"
Changelog = "https://opensource.nibr.com/torchsurv/CHANGELOG.html"

[tool.pylint]
max-line-length = 250
disable = ["C0114", "C0116", "R0801", "R0915", "E0402"]
max-args = 10
max-attributes = 15
max-module-lines = 1500
max-locals = 40

[tool.isort]
profile = "black"

[tool.mypy]
show_error_codes = true

[tool.codespell]
ignore-words-list = ["TE", "FPR", "tOI", "te"]  # Known false positives
skip= ["*.bib", "*.toml"]  # Exclude references, which may contain names confusing the spell checker
